# lionweb-python

./: .bumpversion.cfg  .coveragerc  .gitignore  README.md  ROADMAP.md  Requirements.txt  all_checks.sh  mypy.ini  prepare_for_tests.sh  pyproject.toml  release.sh  requirements.txt  setup.py  task-language.json
.github/workflows/: check.yml  coverage.yml  docs-deploy.yml  test-docs-deploy.yml
docs-examples/: author-language.py  heterogeneous-nodes.py  homogeneous-nodes.py  repo-example.py  serialization-example.py
src/lionweb/: __init__.py
src/lionwebpython/: lionweb_version.py
tests/api/: test_composite_classifier_instance_resolver.py  test_local_classifier_instance_resolver.py
tests/client/: abstract_client_functional_test.py  test_repositories_crud.py
tests/docker/: Dockerfile  my-server-local-config.json
tests/generation/: test_ASTBuilder.py  test_language_generation.py  test_naming_utils.py
tests/language/: ast.language.v1.json  base_test.py  test_annotation.py  test_buildin_ids_and_keys.py  test_classifier_ancestors.py  test_concept.py  test_concept_reflection.py  test_containment.py  test_definition.py  test_enumeration.py  test_language.py  test_lioncore_builtins.py  test_meta_circularity.py  test_property.py  test_reference.py  test_simple_language.py
tests/repoclient/: abstract_repo_client_functional_test.py  test_repositories_crud.py
tests/self/: test_correspondance_with_documentation.py  test_lioncore.py
tests/serialization/: my_annotation.py  my_node_with_properties.py  (+12 more)
website/: docusaurus.config.js  package.json  sidebars.js
(+170 files in other folders)
