[build-system]
requires = ["setuptools", "wheel", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/lionwebpython/__init__.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "lionweb-python"
description = "A Python package for working with LionWeb"
readme = "README.md"
authors = [{ name = "Federico Tomassetti", email = "federico@strumenta.com" }]
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
dependencies = [
    "requests"
]